fixed logo position on mobile

--- a/Assets/Styles/site.css
+++ b/Assets/Styles/site.css
@@ -77,5 +77,7 @@
 
     .logo {
         width: 65%;
+        margin-bottom: -30px;
+        margin-top: 20px;
       }
  }
